close #5 feat: user repository
